# eventqr-gen-backend

./: .gitignore  README.md  pyproject.toml
app/: db.py  main.py  schemas.py  users.py  users_sql.py  users_sql_auth.py
app/api/: auth.py  events.py  tickets.py  users.py
app/models/: events.py  tickets.py  user.py
app/services/: auth_service.py  event_service.py  ticket_service.py  user_service.py
app/utils/: config.py  dependencies.py  id_generator.py  qrcode_generator.py  security.py
